--- a/index.html
+++ b/index.html
@@ -3,35 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flashcard</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Flashcard</title>
 </head>
 <body>
     <main>
         <section id="container">
             <article class="cartao">
-                    <div class="cartao__conteudo">
-                            <h3>Programação</h3>
-                            <div class="cartao__conteudo__pergunta">
-                                    O que é JavaScript?
-                            </div>
-                            <div class="cartao__conteudo__resposta">
-                                    O JavaScript é uma linguagem de programação
-                            </div>
+                <div class="cartao__conteudo">
+                    <h3>Biologia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual foi a primeira teoria proposta por Mendel?</p>
                     </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Segregação dos fatores.</p>
+                    </div>
+                </div>
             </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
-                        <h3>Programação</h3>
-                        <div class="cartao__conteudo__pergunta">
-                                O que é CSS?
-                        </div>
-                        <div class="cartao__conteudo__resposta">
-                                O CSS é uma linguagem de estilização
-                        </div>
+                    <h3>Sociologia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual foi a teoria de Max Weber?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>Considera as organizações como sistemas burocráticos.</p>
+                    </div>
                 </div>
-        </article>
-    </section>
-
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>História</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
